--- a/RTSViewer/Resources/Localizable.strings
+++ b/RTSViewer/Resources/Localizable.strings
@@ -11,6 +11,7 @@
 "stream-detail-input.streamName.placeholder.label" = "Enter your stream name";
 "stream-detail-input.accountId.placeholder.label" = "Enter your account ID";
 "stream-detail-input.play.button" = "Play";
+"stream-detail-input.recent-streams.button" = "Recent Streams";
 "stream-detail-input.rememberStream.toggle" = "Remember stream";
 "stream-detail-input.footnote.label" = "Copyright © 2022 Dolby.io — All Rights Reserved";
 "stream-detail-input.credentials-error.labal" = "Invalid Stream name or Account ID";
@@ -23,3 +24,8 @@
 "stream.simulcast.label" = "Simulcast";
 "stream.media-stats.label" = "Media stats";
 "stream.live-indicator.label" = "Live indicator";
+
+/** Recent Streams Screen */
+
+"recent-streams.title.label" = "Select a recently used stream";
+"recent-streams.format.label %@ %@" = "%@ (Account ID: %@)";
