--- a/RTSViewer/Resources/Localizable.strings
+++ b/RTSViewer/Resources/Localizable.strings
@@ -13,6 +13,7 @@
 "stream-detail-input.play.button" = "Play";
 "stream-detail-input.rememberStream.toggle" = "Remember stream";
 "stream-detail-input.footnote.label" = "Copyright © 2022 Dolby.io — All Rights Reserved";
+"stream-detail-input.credentials-error.labal" = "Invalid Stream name or Account ID";
 
 /** Stream Screen */
 
