--- a/RTSViewer/Resources/Localizable.strings
+++ b/RTSViewer/Resources/Localizable.strings
@@ -17,6 +17,7 @@
 
 /** Stream Screen */
 
+"stream.network.disconnected.label" = "Disconnected from the network";
 "stream.offline.title.label" = "Stream is offline";
 "stream.offline.subtitle.label" = "Please wait for livestream to begin.";
 "stream.live.label" = "LIVE";
