Optimise play video, audio and makeRenderer functions

--- a/LocalPackages/DolbyIORTSUIKit/Sources/DolbyIORTSUIKit/Resources/en.lproj/Localizable.strings
+++ b/LocalPackages/DolbyIORTSUIKit/Sources/DolbyIORTSUIKit/Resources/en.lproj/Localizable.strings
@@ -50,3 +50,7 @@ Follow video: Switch audio source when a video is selected. If the selected vide
 
 "stream.live.label" = "LIVE";
 "stream.offline.label" = "OFFLINE";
+
+/** Video View */
+
+"video-view.main.label" = "Main";
