--- a/interactive-player/Interactive Viewer/iOS/Localizable.strings
+++ b/interactive-player/Interactive Viewer/iOS/Localizable.strings
@@ -80,5 +80,6 @@
 "stream.stats.jitter-buffer-est-count.label" = "Jitter buffer est count";
 "stream.stats.jitter-buffer-delay.label" = "Jitter buffer delay";
 "stream.stats.jitter-buffer-target-delay.label" = "Jitter buffer target delay";
+"stream.stats.jitter-buffer-minimum-delay.label" = "Jitter buffer min delay";
 
 
