--- a/interactive-player/Interactive Viewer/iOS/Localizable.strings
+++ b/interactive-player/Interactive Viewer/iOS/Localizable.strings
@@ -56,6 +56,7 @@
 "stream.settings.label" = "Settings";
 "stream.stats.name.label" = "Name";
 "stream.stats.value.label" = "Value";
+"stream.stats.mid.label" = "ID";
 "stream.stats.rtt.label" = "RTT";
 "stream.stats.video-resolution.label" = "Video Resolution";
 "stream.stats.fps.label" = "FPS";
