--- a/interactive-player/Interactive Viewer/iOS/Localizable.strings
+++ b/interactive-player/Interactive Viewer/iOS/Localizable.strings
@@ -12,9 +12,21 @@
 "stream-detail-input.subtitle.label" = "Enter the stream name and publisher account ID to view a stream.";
 "stream-detail-input.play.button" = "Play";
 "stream-detail-input.footnote.label" = "Copyright © 2023 Dolby.io — All Rights Reserved";
-"stream-detail-input.credentials-error.label" = "Invalid Stream name or Account ID";
+"stream-detail-input.empty-credentials-error.label" = "Invalid Stream name or Account ID";
+"stream-detail-input.connection-failure.label" = "Failed to connect. Please try again later";
 "stream-detail-input.demo-stream.label" = "Demo a stream";
 "stream-detail-input.try-a-demo.label" = "Try a Dolby.io demo stream.";
+"stream-detail-input.configure-stream-label" = "Configure stream viewing";
+"stream-detail-input.development-placeholder-label" = "Use development server";
+"stream-detail-input.disable-audio-placeholder-label" = "Disable audio";
+"stream-detail-input.no-playout-delay-label" = "Disable playout delay";
+"stream-detail-input.jitter-buffer-delay-placeholder-label" = "Jitter Buffer Delay";
+"stream-detail-input.primary-video-quality-label" = "Primary video quality:";
+
+/** App configuration Screen */
+
+"app-configuration-title" = "App configurations";
+"app-configuration-show-debug-features-label" = "Show debug features";
 
 /** Stream Screen */
 
@@ -35,8 +47,11 @@
 "recent-streams.table-header-label" = "Recently viewed";
 "recent-streams.table-header-button" = "View all";
 "recent-streams.account-id.title.label" = "ID:";
-"recent-streams.account-id.format.label %@" = "%@";
-"recent-streams.stream-name.format.label %@" = "%@";
+"recent-streams.use-dev-server.label" = "Development server:";
+"recent-streams.video-jitter-buffer.label" = "Video Jitter buffer in ms:";
+"recent-streams.no-playout-delay.label" = "Disable playout delay:";
+"recent-streams.disable-audio.label" = "Disable Audio:";
+"recent-streams.primary-video-quality.label" = "Primary video quality:";
 "recent-streams.option-separator.label" = "or";
 "recent-streams.play-new.button" = "PLAY NEW";
 "recent-streams.footnote.label" = "Copyright © 2023 Dolby.io — All Rights Reserved";
