--- a/interactive-player/Interactive Viewer/Localizable.strings
+++ b/interactive-player/Interactive Viewer/Localizable.strings
@@ -25,7 +25,8 @@
 "stream-detail-input.minimum-playout-delay-placeholder-label" = "Minimum Playout Delay";
 "stream-detail-input.maximum-playout-delay-placeholder-label" = "Maximum Playout Delay";
 "stream-detail-input.primary-video-quality-label" = "Primary video quality:";
-"stream-detail-input.max-bitrate-label" = "Maxium Bitrate:";
+"stream-detail-input.set-max-bitrate-label" = "Set Maximum Bitrate";
+"stream-detail-input.max-bitrate-label" = "Maxium Bitrate (kbps):";
 "stream-detail-server-url-label" = "Server URL";
 
 /** App configuration Screen */
