--- a/rts-viewer-tvos/RTSViewer/Resources/Localizable.strings
+++ b/rts-viewer-tvos/RTSViewer/Resources/Localizable.strings
@@ -47,7 +47,8 @@
 "stream.stats.name.label" = "Name";
 "stream.stats.value.label" = "Value";
 "stream.stats.mid.label" = "MID";
-"stream.stats.rtt.label" = "RTT";
+"stream.stats.current-rtt.label" = "Current RTT";
+"stream.stats.total-rtt.label" = "Total RTT";
 "stream.stats.video-resolution.label" = "Video Resolution";
 "stream.stats.fps.label" = "FPS";
 "stream.stats.video-bitrate.label" = "Video Bitrate";
@@ -59,7 +60,6 @@
 "stream.stats.video-jitter.label" = "Video Jitter";
 "stream.stats.audio-jitter.label" = "Audio Jitter";
 "stream.stats.codecs.label" = "Codecs";
-"stream.stats.timestamp.label" = "Timestamp";
 "stream.stats.server.label" = "Server";
 "stream.stats.cluster.label" = "Cluster";
 "stream.stats.decoder-impl.label" = "Decoder Impl";
@@ -71,3 +71,18 @@
 "stream.stats.jitter-buffer-delay.label" = "Jitter buffer delay";
 "stream.stats.jitter-buffer-target-delay.label" = "Jitter buffer target delay";
 "stream.stats.jitter-buffer-minimum-delay.label" = "Jitter buffer min delay";
+"stream.stats.target-bitrate.label" = "Target Bitrate";
+"stream.stats.outgoing-bitrate.label" = "Outgoing Bitrate";
+"stream.stats.subscriber-id.label" = "Subscriber ID";
+"stream.stats.stream-view-id.label" = "Stream View ID";
+"stream.stats.cluster-id.label" = "Cluster ID";
+"stream.stats.freeze-count.label" = "Freeze Count";
+"stream.stats.freeze-duration.label" = "Freeze Duration";
+"stream.stats.pause-count.label" = "Pause Count";
+"stream.stats.pause-duration.label" = "Pause Duration";
+"stream.stats.retransmitted-packets.label" = "Retransmitted Packets";
+"stream.stats.retransmitted-bytes.label" = "Retransmitted Bytes";
+"stream.stats.incoming-bitrate.label" = "Incoming Bitrate";
+"stream.stats.packets-received.label" = "Packets Received";
+"stream.stats.timestamp.label" = "Timestamp (GMT)";
+"stream.stats.total-stream-time.label" = "Total Stream Time";
