--- a/interactive-player/Interactive Viewer/Localizable.strings
+++ b/interactive-player/Interactive Viewer/Localizable.strings
@@ -9,6 +9,7 @@
 "stream-detail-accountid-placeholder-label" = "Account ID";
 "stream-detail-input.title.label" = "Interactive player";
 "stream-detail-input.start-a-stream.label" = "Start a stream";
+
 "stream-detail-input.subtitle.label" = "Enter the stream name and publisher account ID to view a stream.";
 "stream-detail-input.play.button" = "Play";
 "stream-detail-input.footnote.label" = "Copyright © 2023 Dolby.io — All Rights Reserved";
@@ -37,11 +38,21 @@
 "stream-detail-input.max-bitrate-label" = "Maxium Bitrate (kbps):";
 "stream-detail-server-url-label" = "Server URL";
 
+/** Channel Detail Input View */
+"channel-detail-input.start-a-channel.label" = "Multi-Channels";
+"channel-detail-input.subtitle.label" = "Enter up to 4 separate streamNames & accountIDs to view a multiple channels.";
+"channel-detail-input.channel-1.label" = "Channel 1";
+"channel-detail-input.channel-2.label" = "Channel 2";
+"channel-detail-input.channel-3.label" = "Channel 3";
+"channel-detail-input.channel-4.label" = "Channel 4";
+
+
 /** App configuration Screen */
 
 "app-configuration-title" = "App configurations";
 "app-configuration-show-debug-features-label" = "Show debug features";
 "app-configuration-enable-pip-features-label" = "Enable Picture In Picture";
+"app-configuration-enable-multichannel-label" = "Enable MultiChannel";
 
 /** Recent Streams Screen */
 
