Update to use new client stats API

--- a/rts-viewer-tvos/RTSViewer/Resources/Localizable.strings
+++ b/rts-viewer-tvos/RTSViewer/Resources/Localizable.strings
@@ -53,44 +53,42 @@
 "stream.stats.mid.label" = "MID";
 "stream.stats.current-rtt.label" = "Current RTT";
 "stream.stats.total-rtt.label" = "Total RTT";
-"stream.stats.video-resolution.label" = "Video Resolution";
+"stream.stats.video-resolution.label" = "Video resolution";
 "stream.stats.fps.label" = "FPS";
-"stream.stats.video-bitrate.label" = "Video Bitrate";
-"stream.stats.audio-bitrate.label" = "Audio Bitrate";
-"stream.stats.video-total-received.label" = "Video Total Received";
-"stream.stats.audio-total-received.label" = "Audio Total Received";
-"stream.stats.video-packet-loss.label" = "Video Packet Loss";
-"stream.stats.audio-packet-loss.label" = "Audio Packet Loss";
-"stream.stats.video-jitter.label" = "Video Jitter";
-"stream.stats.audio-jitter.label" = "Audio Jitter";
+"stream.stats.video-bitrate.label" = "Video bitrate";
+"stream.stats.audio-bitrate.label" = "Audio bitrate";
+"stream.stats.video-total-received.label" = "Video total received";
+"stream.stats.audio-total-received.label" = "Audio total received";
+"stream.stats.video-packet-loss.label" = "Video packet loss";
+"stream.stats.audio-packet-loss.label" = "Audio packet loss";
+"stream.stats.video-jitter.label" = "Video jitter";
+"stream.stats.audio-jitter.label" = "Audio jitter";
 "stream.stats.codecs.label" = "Codecs";
 "stream.stats.server.label" = "Server";
 "stream.stats.cluster.label" = "Cluster";
-"stream.stats.decoder-impl.label" = "Decoder Impl";
+"stream.stats.decoder-impl.label" = "Decoder implementation";
 "stream.stats.processing-delay.label" = "Processing delay";
 "stream.stats.decode-time.label" = "Decode time";
 "stream.stats.frames-decoded.label" = "Frames decoded";
 "stream.stats.frames-dropped.label" = "Frames dropped";
-"stream.stats.jitter-buffer-est-count.label" = "Jitter buffer Est count";
 "stream.stats.jitter-buffer-delay.label" = "Jitter buffer delay";
-"stream.stats.jitter-buffer-target-delay.label" = "Jitter buffer target delay";
 "stream.stats.jitter-buffer-minimum-delay.label" = "Jitter buffer min delay";
-"stream.stats.target-bitrate.label" = "Target Bitrate";
-"stream.stats.outgoing-bitrate.label" = "Outgoing Bitrate";
+"stream.stats.target-bitrate.label" = "Target bitrate";
+"stream.stats.outgoing-bitrate.label" = "Outgoing bitrate";
 "stream.stats.subscriber-id.label" = "Subscriber ID";
-"stream.stats.stream-view-id.label" = "Stream View ID";
+"stream.stats.stream-view-id.label" = "Stream view ID";
 "stream.stats.cluster-id.label" = "Cluster ID";
-"stream.stats.freeze-count.label" = "Freeze Count";
-"stream.stats.freeze-duration.label" = "Freeze Duration";
-"stream.stats.pause-count.label" = "Pause Count";
-"stream.stats.pause-duration.label" = "Pause Duration";
-"stream.stats.retransmitted-packets.label" = "Retransmitted Packets";
-"stream.stats.retransmitted-bytes.label" = "Retransmitted Bytes";
-"stream.stats.incoming-bitrate.label" = "Incoming Bitrate";
-"stream.stats.packets-received.label" = "Packets Received";
+"stream.stats.freeze-count.label" = "Freeze count";
+"stream.stats.freeze-duration.label" = "Freeze duration";
+"stream.stats.pause-count.label" = "Pause count";
+"stream.stats.pause-duration.label" = "Pause duration";
+"stream.stats.retransmitted-packets.label" = "Retransmitted packets";
+"stream.stats.retransmitted-bytes.label" = "Retransmitted bytes";
+"stream.stats.incoming-bitrate.label" = "Incoming bitrate";
+"stream.stats.packets-received.label" = "Packets received";
 "stream.stats.timestamp.label" = "Timestamp (GMT)";
-"stream.stats.total-stream-time.label" = "Total Stream Time";
-"stream.stats.target-bitrate.label" = "Target Bitrate";
-"stream.stats.outgoing-bitrate.label" = "Outgoing Bitrate";
+"stream.stats.total-stream-time.label" = "Total stream time";
+"stream.stats.target-bitrate.label" = "Target bitrate";
+"stream.stats.outgoing-bitrate.label" = "Outgoing bitrate";
 
 "video-view.main.label" = "Main";
