--- a/rts-viewer-tvos/RTSViewer/Resources/Localizable.strings
+++ b/rts-viewer-tvos/RTSViewer/Resources/Localizable.strings
@@ -5,7 +5,7 @@
 
 /** Stream Detail Input Screen */
 
-"stream-detail-input.header.label" = "Dolby.io Stream Monitor";
+"stream-detail-input.header.label" = "Dolby OptiView Stream Monitor";
 "stream-detail-input.title.label" = "View stream";
 "stream-detail-input.subtitle.label" = "Enter your stream information to view a stream";
 "stream-detail-input.streamName.placeholder.label" = "Enter your stream name";
@@ -15,7 +15,7 @@
 "stream-detail-input.recent-streams.button" = "Saved Streams";
 "stream-detail-input.clear-stream-history.button" = "Clear stream history";
 "stream-detail-input.rememberStream.toggle" = "Remember stream";
-"stream-detail-input.footnote.label" = "Copyright © 2024 Dolby.io — All Rights Reserved";
+"stream-detail-input.footnote.label" = "Copyright © 2025 Dolby OptiView — All Rights Reserved";
 "stream-detail-input.credentials-error.label" = "Invalid Stream name or Account ID";
 "stream-detail-input.clear-streams.label" = "Are you sure you want to clear the saved streams?";
 "stream-detail-input.clear-streams.alert.cancel.button" = "Cancel";
@@ -25,7 +25,7 @@
 "stream.settings.button" = "Settings";
 "stream.network.disconnected.label" = "Disconnected from the network";
 "stream.offline.title.label" = "Stream is offline";
-"stream.offline.subtitle.label" = "Please wait for livestream to begin.";
+"stream.offline.subtitle.label" = "Please wait for the live stream to begin.";
 "stream.live.label" = "LIVE";
 "stream.offline.label" = "OFFLINE";
 "stream.simulcast.label" = "Simulcast";
